# peakmon

./: CLAUDE.md  Cargo.toml
.github/workflows/: release.yml
homebrew/: peakmon.rb
src/: app.rs  config.rs  event.rs  main.rs  util.rs
src/logs/: mod.rs  stream.rs
src/metrics/: ai.rs  battery.rs  cpu.rs  disk.rs  gpu.rs  history.rs  memory.rs  mod.rs  network.rs  process.rs  temperature.rs
src/ui/: footer.rs  header.rs  help.rs  layout.rs  mod.rs  theme.rs
src/ui/tabs/: ai_detail.rs  cpu_detail.rs  dashboard.rs  disk_detail.rs  gpu_detail.rs  logs.rs  memory_detail.rs  mod.rs  network_detail.rs  processes.rs  temperatures.rs
src/ui/widgets/: metric_gauge.rs  mod.rs  sortable_table.rs  sparkline_panel.rs
