[package]
name = "peakmon"
version = "0.4.0"
edition = "2021"
description = "A real-time terminal system monitor for macOS"
license = "MIT"
repository = "https://github.com/kenbarker/peakmon"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
hostname = "0.4"
libc = "0.2"
ureq = { version = "2.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
